@@ -2,7 +2,7 @@ Title: Survival Analysis
 Maintainer: Terry Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 2.37-1
+Version: 2.37-2
 Date: 2012-11-01
 Depends: stats, utils, graphics, splines, R (>= 2.13.0)
 LazyData: Yes
