@@ -209,7 +209,8 @@ summary.survfit <- function(object, times, censored=FALSE,
         if (!is.null(fit$na.action)) temp$na.action <- fit$na.action
   
     }
-    temp$std.err <- temp$std.err*temp$surv  #std error of the survival curve
+    if (!is.null(temp$std.err))
+        temp$std.err <- temp$std.err*temp$surv  #std error of the survival curve
     class(temp) <- 'summary.survfit'
     temp
 }
