@@ -1,5 +1,10 @@
 \name{NEWS}
 \title{NEWS file for the survival package}
+\section{Changes in version 2.37-2}{
+  \itemize{
+    item Two bug fixes that were turned up by running tests for all the
+    packages that depend on survival (158 of them).
+}}
 \section{Changes in version 2.37-1}{
   \itemize{
     \item Add a new multi-state type to the Surv object.  Update the
